# Temple-Malaria-Simulation-Analysis

./: .gitignore  AL4_10reps.txt  AL4_10reps_job.sh  Calibration Notebook backup.ipynb  Calibration Notebook v2.ipynb  Calibration Notebook.ipynb  Moz37.pbs  MyJob.sh  README.md  ago.pbs  batch_commands.nu  batch_commands.txt  bfa_validation.ipynb  calibration.ipynb  exploratory_analysis.ipynb  generate_commands.bash  generate_commands.nu  generate_commands.py  launch_jobs.sh  missing_calibration_runs_10.txt  missing_calibration_runs_10000_0.75.txt  missing_calibration_runs_10000_0.75_job.sh  missing_calibration_runs_10000_0.8.txt  missing_calibration_runs_10000_0.85.txt  missing_calibration_runs_10000_0.85_job.sh  missing_calibration_runs_10000_0.8_job.sh  missing_calibration_runs_10000_0.9.txt  missing_calibration_runs_10000_0.95.txt  missing_calibration_runs_10000_0.95_job.sh  missing_calibration_runs_10000_0.9_job.sh  missing_calibration_runs_10000_job.sh  missing_calibration_runs_1000_0.9.txt  missing_calibration_runs_1000_0.95.txt  missing_calibration_runs_1000_0.95_job.sh  missing_calibration_runs_1000_0.9_job.sh  missing_calibration_runs_1000_job.sh  missing_calibration_runs_100_0.85.txt  missing_calibration_runs_100_0.85_job.sh  missing_calibration_runs_100_0.9.txt  missing_calibration_runs_100_0.95.txt  (+5914 more)
doc/: Overview.md  Suggested_Improvements.md
input/: input.yml  input2 copy.yml  input_AL25-DHA-PPQ75.yml  input_AL5.yml  input_AL50-ASAQ50.yml  input_AL50-DHA-PPQ50.yml  input_AL75-ASAQ25.yml  input_AL75-DHA-PPQ25.yml  input_ASAQ.yml  input_DHA-PPQ.yml
input_old/: input_AL4.yml  input_ASAQ.yml  input_ASAQ25-DHA-PPQ75.yml
jobs/: missing_calibration_runs_10000_0.451.txt  missing_calibration_runs_10000_0.451_job.sh  missing_calibration_runs_10000_0.486.txt  missing_calibration_runs_10000_0.486_job.sh  missing_calibration_runs_10000_0.561.txt  missing_calibration_runs_10000_0.561_job.sh  missing_calibration_runs_10000_0.603.txt  missing_calibration_runs_10000_0.603_job.sh  missing_calibration_runs_10000_0.661.txt  missing_calibration_runs_10000_0.661_job.sh  missing_calibration_runs_10000_0.676.txt  missing_calibration_runs_10000_0.676_job.sh  missing_calibration_runs_10000_0.755.txt  missing_calibration_runs_10000_0.755_job.sh  missing_calibration_runs_10000_0.783.txt  missing_calibration_runs_10000_0.783_job.sh  (+320 more)
masim_analysis/: analysis.py
(+10556 files in other folders)
