[project]
name = "masim-analysis"
version = "0.2.0"
description = "Analysis and calibration tools for the Temple malaria simulation model maintained by the Boni Lab"
readme = "README.md"
authors = [
    { name = "James Brodovsky", email = "jbrodovsky@temple.edu" }
]
requires-python = ">=3.10"
dependencies = [
    "jupyter",
    "matplotlib",
    "numpy",
    "pandas",
    "ruamel-yaml>=0.18.10",
    "scikit-learn>=1.6.1",
    "scipy>=1.13.1",
    "seaborn>=0.13.2",
    "sqlalchemy>=2.0.39",
    "sympy>=1.13.3"
]
[project.scripts]
generate-commands = "masim_analysis.commands:main"
calibrate = "masim_analysis.calibrate:main"
create-job = "masim_analysis.commands:generate_job_file"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatchling]
include = ["templates"]

[tool.ruff]
line-length = 120
